# Training-Large-Reasoning-Models-Efficiently-via-Progressive-Thought-Encoding

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: sample_math.jsonl
scripts/: run_inference.py  train_grpo_pte.py
src/pte/: __init__.py  cache.py  config.py  data.py  dynamic_lora.py  grpo.py  hf_integration.py  rewards.py  rollout.py  thought_state.py  trainer.py
tests/: test_core.py
