[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "progressive-thought-encoding"
version = "0.1.0"
description = "Implementation of Progressive Thought Encoding for cache-constrained RL of reasoning LMs."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
hf = [
  "transformers>=4.46",
  "accelerate>=1.0",
  "datasets>=2.18",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
